--- a/B15StudentManagement/app/src/main/res/values/strings.xml
+++ b/B15StudentManagement/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">B15 Student Management</string>
     <string name="btn_delete">Xóa</string>
-    <string name="btn_edit">Sửa</string>
+    <string name="btn_update">Sửa</string>
     <string name="btn_add">Thêm</string>
     <string name="edt_size_class">Nhập sĩ số lớp</string>
     <string name="label_size">Sĩ số</string>
