update B15 student management

--- a/B15StudentManagement/app/src/main/res/values/strings.xml
+++ b/B15StudentManagement/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="edit_id">Nhập mã lớp</string>
     <string name="label_id">Mã lớp</string>
     <string name="title_app">Quản lý sinh viên</string>
+    <string name="btn_null_title">Làm trống</string>
 </resources>
